source/assets/stylesheets/components/_project_preview.scss
.project-preview {
  transition: all 0.3s ease;
  width: 100%;
  height: 200px;
  background-repeat: no-repeat;
  position: relative;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  border: 10px solid white;

  &:hover {
    transition: all 0.3s ease;
    -webkit-filter: grayscale(0%);
    filter: grayscale(0%);

    h3 {
      transition: border 0.3s ease;

      &:before {
        visibility: visible;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
      }
    }
  }

  @include media($mobile-max) {
    border: none;
    margin-bottom: 30px;
  }
}

.project-details {
  position: absolute;
  top: -22px;
  width: 250px;

  h3 {
    transition: all 0.3s ease;
    line-height: 1.1em;
    font-weight: 100;
    display: inline-block;
    position: absolute;

    &:before {
      content: "";
      position: absolute;
      width: 100%;
      height: 1px;
      bottom: 0;
      left: 0;
      background-color: #000;
      visibility: hidden;
      -webkit-transform: scaleX(0);
      transform: scaleX(0);
      -webkit-transition: all 0.3s ease-in-out 0s;
      transition: all 0.3s ease-in-out 0s;
    }
  }

  .description {
    @include clearfix;
    transition: all 0.3s ease;
    background-color: color(light-blue-gray);
    font-weight: bold;
    padding: 8px 20px;
    position: relative;
    top: 22px;
    display: none;

    hr {
      margin-top: 25px;
      border: 0;
      background-color: color(dark-gray);
      height: 1px;
    }

    p {
      &:first-of-type {
        margin-top: 35px;
        font-size: 0.8em;
        line-height: 1.75em;
      }

      &:last-of-type {
        margin: 0;
      }
    }

    .more {
      position: absolute;
      bottom: 10px;
      right: 20px;
    }

    @include media($mobile-max) {
      padding: 25px 20px 15px 20px;
      height: 200px;
      display: block;

      hr {
        position: absolute;
        bottom: 30px;
        width: 210px;
      }
    }
  }

  @include media($mobile-max) {
    width: 250px;
  }
}

